src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-using-impl-items.rs
trait Foo {
    fn foo<'a>(x: &mut Vec<&u8>, y: &u8);
}
impl Foo for () {
    fn foo(x: &mut Vec<&u8>, y: &u8) {
        x.push(y); //~ ERROR lifetime mismatch
    }
}
fn main() {}
